src/assets/styles/components/lists.scss
@import "~assets/styles/base.scss";

.nv-list {
  margin: 0;
  padding: 0;
  list-style-type: none;

  > li {
    @include clearfix();
    line-height: 1rem;
    font-size: 0.85rem;

    + li {
      margin-top: 0.75rem;
    }
  }

  span {
    &.name,
    &.value {
      float: left;
      display: block;
      width: 50%;
    }

    &.name {
      padding-right: 1rem;
      font-weight: 600;
    }

    &.value {
      ul {
        margin: 0;
        padding: 0;
        overflow: hidden;
        list-style-type: none;

        li {
          word-break: break-all;
        }
      }
    }

    &.name {
      margin-bottom: 0.25rem;
    }

    &.header {
      margin-bottom: 0.125rem;
      font-weight:600;
      display: block;
    }

    &.content {
      display: block;
    }
  }
}

